# lal

./: CHANGELOG.md  lal.cabal  readme.md
app/: Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.5/: lal-0.1.0.0-inplace-Components.conf  lal-0.1.0.0-inplace-UI.conf  lal-0.1.0.0-inplace.conf  package.cache
