cabal-version:      3.0
name:               lal
version:            0.1.0.0
synopsis:           A simple window-manager status bar

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Luca Leon Happel

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

executable lal
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      X11 ^>= 1.10,
                      X11-xft ^>= 0.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
